main.css
html {
    background-color: #000;
    background: url(pics/bg.png) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.header {
    display: block;
    overflow: hidden;
    height: 60px;
    background-color: #0098ff;
    padding: 10px;
    box-shadow: black 2px 2px 3px 0;
}

.nav {
    display: inline-block;
    float: right;
    clear: both;
    margin: 10px;
    z-index: -1;
}

.nav li {
    display: inline-block;
    padding: 10px;
}

.nav li a {
    font-family: Montserrat, sans-serif;
    color: #070707;
    font-size: 18px;
    font-style: normal;
    text-decoration: none;
}

.nav li a:hover {
    font-weight: bold;
}

.nav li:active {
    text-shadow: #faf5f5 2px 2px 0px;
}

#pageTitle {
    display: inline-block;
    margin: 10px;
    font-family: Oswald sans-serif;
    font-size:28px;
}

#pageTitle img {
    width: 28px;
    height: 28px;
    padding: 0 6px;
}

#pageTitle a {
    text-decoration: none;
    color: #000;
}

#container {
    display: block;
    width: 600px;
    margin: 60px auto 20px;
    padding: 60px;
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    background-color: #fff;
    box-shadow: black 2px 2px 3px 0;
}

h2 {
    font-family: 'PT Sans' , 'sans-serif';
}

#address {
    display: inline-block;
    width: 400px;
    margin: 12px auto 12px;
    text-align: center;
    font-size: 16px;
    font-weight: bold;
}

label {
    display: inline-block;
    width: 140px;
    text-align: right;
    font-size: 16px;
}

.registrationForms {
    width: 600px;
    margin: 0 auto;
}

.registrationForms input[type=text] {
    display: inline-block;
    width: 400px;
    height: 40px;
    margin: 20px 0 20px;
    padding: 2px;
    text-align: left;
    border: 0;
    outline: 0;
    background: transparent;
    border-bottom: 2px solid black;
    font-size: 20px;
}

.registrationForms input[type=text]:focus {
    background-color: #D0D0D0;
}

.registrationForms label {
    font-size: 20px;
    font-weight: bold;
}

.formError {
    font-size: 18px;
    padding: 4px;
    color: #F00000;
}

.selectedPage {
    border-bottom: solid 2px #0000FF;
}

#floorMap {
    width: 800px;
    height: 400px;
    margin: 0 auto;
    padding: 2px;
    background-color: #D0D0D0;
}

#boothRow1{
    margin-top: 35px;
    margin-left: 35px;
}

#boothRow2 {
    margin-top: 35px;
    margin-left: 35px;
}

#boothRow3 {
    margin-left: 35px;
}

#boothRow4 {
    margin-top: 35px;
}

.booth {
    display: inline-block;
    width: 35px;
    height: 35px;
    border: 1px solid #000;
}

#booth9 {
    margin-left: 35px;
}

#booth26 {
    margin-left: 35px;
}

#booth43 {
    margin-left: 35px;
}

#booth64 {
    margin-left: 70px;
}

